--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Update packages
         run: |
           npm run update-packages
+      # - name: Re-install
+      #   run: npm install
+      # - name: Test
+      #   run: npm test
       - name: Has changes
         run: |
           git --no-pager diff --compact-summary  --exit-code && echo "git_status=clean" >> $GITHUB_ENV || echo "git_status=dirty" >> $GITHUB_ENV
