--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -42,7 +42,6 @@ jobs:
         run: |
           git config --local user.name 'Jason Dent'
           git config --local user.email 'jason+workflow@streetsidesoftware.nl'
-          git commit -m "ci: Auto Bot -- Update ALL Dependencies" -a
       - name: Create Remote Branch ${{ env.NEW_BRANCH }}
         if: env.git_status == 'dirty'
         uses: peterjgrainger/action-create-branch@v2.0.1 # cspell:ignore peterjgrainger
@@ -50,6 +49,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           branch: ${{ env.NEW_BRANCH }}
+      - name: Commit Changes
+        if: env.git_status == 'dirty'
+        run: |
+          git commit -m "ci: Auto Bot -- Update ALL Dependencies" -a
       - name: Push to branch ${{ env.NEW_BRANCH }}
         if: env.git_status == 'dirty'
         uses: ad-m/github-push-action@master
