--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -25,13 +25,9 @@ jobs:
           npm update -S
       - name: Install
         run: npm install
-      - name: Update packages
-        run: |
-          npm run update-packages
-      # - name: Re-install
-      #   run: npm install
-      # - name: Test
-      #   run: npm test
+#       - name: Update packages
+#         run: |
+#           npm run update-packages
       - name: Has changes
         run: |
           git --no-pager diff --compact-summary  --exit-code && echo "git_status=clean" >> $GITHUB_ENV || echo "git_status=dirty" >> $GITHUB_ENV
@@ -42,23 +38,6 @@ jobs:
         run: |
           git config --local user.name 'Jason Dent'
           git config --local user.email 'jason+workflow@streetsidesoftware.nl'
-      - name: Create Remote Branch ${{ env.NEW_BRANCH }}
-        if: env.git_status == 'dirty'
-        uses: peterjgrainger/action-create-branch@v2.0.1 # cspell:ignore peterjgrainger
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          branch: ${{ env.NEW_BRANCH }}
-      - name: Commit Changes
-        if: env.git_status == 'dirty'
-        run: |
-          git commit -m "ci: Auto Bot -- Update ALL Dependencies" -a
-      - name: Push to branch ${{ env.NEW_BRANCH }}
-        if: env.git_status == 'dirty'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ env.NEW_BRANCH }}
       - name: Create Pull Request
         if: env.git_status == 'dirty'
         uses: peter-evans/create-pull-request@v3
