--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -33,6 +33,12 @@ jobs:
           git --no-pager diff --compact-summary  --exit-code && echo "git_status=clean" >> $GITHUB_ENV || echo "git_status=dirty" >> $GITHUB_ENV
       - name: Echo git_status
         run: echo ${{ env.git_status }}
+      - uses: tibdex/github-app-token@v1
+        if: env.git_status == 'dirty'
+        id: generate-token
+        with:
+          app_id: ${{ secrets.AUTOMATION_APP_ID }}
+          private_key: ${{ secrets.AUTOMATION_PRIVATE_KEY }}
       - name: Create Pull Request
         if: env.git_status == 'dirty'
         uses: peter-evans/create-pull-request@v3
@@ -41,3 +47,5 @@ jobs:
           branch: ${{ env.NEW_BRANCH }}
           base: ${{ github.event.inputs.branch }}
           title: "ci: Workflow Bot -- Update ALL Dependencies (${{ github.event.inputs.branch }})"
+          token: ${{ steps.generate-token.outputs.token }}
+
