ci: trigger on package change

--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -1,6 +1,13 @@
 name: Update Dependencies
 
 on:
+  push:
+    branches:
+      - master
+      - cspell4
+    paths:
+      - "**/package.json"
+      - "**/package-lock.json"
   workflow_dispatch:
   schedule:
     - cron: "3 5 * * *"
