--- a/packages/cspell/.vscode/launch.json
+++ b/packages/cspell/.vscode/launch.json
@@ -4,15 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "node",
             "request": "launch",
             "name": "cspell: Run",
             "program": "${workspaceRoot}/bin.js",
-			"args": ["--root=..", "-v", "**/*.ts", "*.md" ],
+            "args": [
+                "--root=..",
+                "-v",
+                "**/*.ts",
+                "*.md"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true
         },
         {
@@ -20,9 +26,11 @@
             "request": "launch",
             "name": "cspell: Run no args",
             "program": "${workspaceRoot}/bin.js",
-			"args": [],
+            "args": [],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true
         },
         {
@@ -30,9 +38,14 @@
             "request": "launch",
             "name": "cspell: Run CSpell against current file",
             "program": "${workspaceRoot}/bin.js",
-			"args": ["-v", "${file}"],
+            "args": [
+                "-v",
+                "${file}"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true,
             "preLaunchTask": "npm: build"
         },
@@ -41,9 +54,14 @@
             "request": "launch",
             "name": "cspell: Run CSpell against stdin",
             "program": "${workspaceRoot}/bin.js",
-			"args": ["-v", "stdin"],
+            "args": [
+                "-v",
+                "stdin"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true,
             "preLaunchTask": "npm: build",
             "console": "integratedTerminal"
@@ -53,9 +71,14 @@
             "request": "launch",
             "name": "cspell: Run Trace",
             "program": "${workspaceRoot}/bin.js",
-			"args": ["trace", "about"],
+            "args": [
+                "trace",
+                "about"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true
         },
         {
@@ -63,9 +86,46 @@
             "request": "launch",
             "name": "cspell: Run Check",
             "program": "${workspaceRoot}/bin.js",
-			"args": ["check", "--config", "${workspaceRoot}/samples/.cspell.json", "${workspaceRoot}/samples/src/sample.c"],
+            "args": [
+                "check",
+                "--config",
+                "${workspaceRoot}/samples/.cspell.json",
+                "${workspaceRoot}/samples/src/sample.c"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "cspell: Run Link",
+            "program": "${workspaceRoot}/bin.js",
+            "args": [
+                "link"
+            ],
+            "cwd": "${workspaceRoot}",
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "cspell: Run Link Add",
+            "program": "${workspaceRoot}/bin.js",
+            "args": [
+                "link",
+                "add",
+                "cspell-dict-nl-nl/cspell-ext.json"
+            ],
+            "cwd": "${workspaceRoot}/../cspell-lib",
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true
         },
         {
@@ -73,17 +133,26 @@
             "request": "launch",
             "name": "cspell: Run bad glob",
             "program": "${workspaceRoot}/dist/app.js",
-			"args": ["-v", "src", "**/*.test.ts"],
+            "args": [
+                "-v",
+                "src",
+                "**/*.test.ts"
+            ],
             "cwd": "${workspaceRoot}",
-			"outFiles": [ "${workspaceRoot}/dist/**/*.js" ],
+            "outFiles": [
+                "${workspaceRoot}/dist/**/*.js"
+            ],
             "sourceMaps": true
         },
-		{
+        {
             "type": "node",
             "request": "launch",
             "name": "cspell: Jest current-file",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
-            "args": ["--runInBand", "${file}"],
+            "args": [
+                "--runInBand",
+                "${file}"
+            ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
@@ -96,7 +165,9 @@
             "request": "launch",
             "name": "cspell: Jest All",
             "program": "${workspaceFolder}/../../node_modules/.bin/jest",
-            "args": ["--runInBand"],
+            "args": [
+                "--runInBand"
+            ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
