--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -70,7 +70,8 @@
     "fs-extra": "^9.0.1",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "strip-ansi": "^6.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
