--- a/packages/cspell/tsconfig.json
+++ b/packages/cspell/tsconfig.json
@@ -1,14 +1,20 @@
 {
 	"compilerOptions": {
 		"target": "es2019",
-		"lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+		"lib": [
+			"es2019",
+			"es2020.promise",
+			"es2020.bigint",
+			"es2020.string"
+		],
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"alwaysStrict": true,
-        "declaration": true,
+		"declaration": true,
 		"noImplicitAny": true,
 		"noImplicitThis": true,
+		"esModuleInterop": true,
 		"strictNullChecks": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
