Do not format `dist/`

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,10 @@
-cspell.schema.json
-tsconfig*.json
-integration-tests/config/config.json
-integration-tests/repositories/*/*/**
-cspell.json
 .vscode/
 [sS]amples/
-lerna.json
 CHANGELOG.md
+cspell.json
+cspell.schema.json
+dist/
+integration-tests/config/config.json
+integration-tests/repositories/*/*/**
+lerna.json
+tsconfig*.json
