ci: remove run id from update dependencies branches

--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -21,7 +21,7 @@ jobs:
           - cspell4
     runs-on: ubuntu-latest
     env:
-      NEW_BRANCH: "update-dependencies-${{ matrix.branch }}-${{ github.run_id }}"
+      NEW_BRANCH: "update-dependencies-${{ matrix.branch }}"
       REF_BRANCH: ${{ matrix.branch }}
     steps:
       - name: Checkout code
