--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "5.0.1",
+  "version": "5.0.2-alpha.0",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -80,9 +80,9 @@
     "cspell-dict-scala": "^1.0.17",
     "cspell-dict-software-terms": "^1.0.19",
     "cspell-dict-typescript": "^1.0.12",
-    "cspell-io": "^5.0.1",
-    "cspell-trie-lib": "^5.0.1",
-    "cspell-util-bundle": "^5.0.1",
+    "cspell-io": "^5.0.2-alpha.0",
+    "cspell-trie-lib": "^5.0.2-alpha.0",
+    "cspell-util-bundle": "^5.0.2-alpha.0",
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "minimatch": "^3.0.4",
