--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-tools",
-  "version": "5.0.2-alpha.1",
+  "version": "5.0.2",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "bin": {
@@ -39,9 +39,9 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^6.2.0",
-    "cspell-io": "^5.0.2-alpha.1",
-    "cspell-trie-lib": "^5.0.2-alpha.1",
-    "cspell-util-bundle": "^5.0.2-alpha.1",
+    "cspell-io": "^5.0.2",
+    "cspell-trie-lib": "^5.0.2",
+    "cspell-util-bundle": "^5.0.2",
     "fs-extra": "^9.0.1",
     "gensequence": "^3.1.1",
     "glob": "^7.1.6",
