--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "5.0.2-alpha.1",
+  "version": "5.0.2",
   "description": "A Spelling Checker for Code!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -65,8 +65,8 @@
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "comment-json": "^4.1.0",
-    "cspell-glob": "^5.0.2-alpha.1",
-    "cspell-lib": "^5.0.2-alpha.1",
+    "cspell-glob": "^5.0.2",
+    "cspell-lib": "^5.0.2",
     "fs-extra": "^9.0.1",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
