--- a/packages/cspell-trie2-lib/package.json
+++ b/packages/cspell-trie2-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie2-lib",
-  "version": "5.0.2-alpha.1",
+  "version": "5.0.2",
   "description": "Trie Data Structure to support cspell.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
