--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   update-dependencies:
+    if: github.repository_owner == "streetsidesoftware"
     strategy:
       matrix:
         branch:
