fix: resolve dictionaries in global node_modules

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -92,6 +92,7 @@
     "gensequence": "^3.1.1",
     "minimatch": "^3.0.4",
     "resolve-from": "^5.0.0",
+    "resolve-global": "^1.0.0",
     "vscode-uri": "^2.1.2"
   },
   "engines": {
