chore: Include temp folder in clean scripts

--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist temp",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
