--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -14,7 +14,7 @@
     "!**/*.test.*"
   ],
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist temp",
     "build": "tsc -p .",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
