--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -21,7 +21,8 @@
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
     "prepublishOnly": "npm run clean-build && npm test",
-    "test": "jest"
+    "test": "jest",
+    "update-snapshot": "jest --updateSnapshot"
   },
   "repository": {
     "type": "git",
