--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -13,7 +13,8 @@
     "clean": "rimraf dist temp",
     "coverage": "jest --coverage",
     "test-watch": "jest --watch",
-    "test": "jest"
+    "test": "jest",
+    "update-snapshot": "jest --updateSnapshot"
   },
   "repository": {
     "type": "git",
