--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -10,7 +10,7 @@ on:
       - "**/package-lock.json"
   workflow_dispatch:
   schedule:
-    - cron: "3 5 * * *"
+    - cron: "0 12 * * 0"
 
 jobs:
   update-dependencies:
