--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -40,10 +40,10 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@cspell/dict-en_us": "^1.2.37",
+    "@cspell/dict-es-es": "^1.0.27",
     "@types/fs-extra": "^9.0.4",
     "@types/node": "^14.14.10",
-    "cspell-dict-en_us": "^1.2.37",
-    "cspell-dict-es-es": "^1.0.27",
     "jest": "^26.6.3",
     "rimraf": "^3.0.2"
   }
