--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "devDependencies": {
+    "@cspell/dict-en_us": "^1.2.37",
+    "@cspell/dict-es-es": "^1.0.27",
+    "@cspell/dict-nl-nl": "^1.0.34",
     "@types/chai": "^4.2.14",
     "@types/configstore": "^4.0.0",
     "@types/eslint": "^7.2.5",
@@ -61,9 +64,6 @@
     "ajv-cli": "^3.3.0",
     "chai": "^4.2.0",
     "coveralls": "^3.1.0",
-    "cspell-dict-en_us": "^1.2.34",
-    "cspell-dict-es-es": "^1.0.24",
-    "cspell-dict-nl-nl": "^1.0.29",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-jest": "^24.1.3",
