--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -50,41 +50,41 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@cspell/dict-aws": "^1.0.12",
+    "@cspell/dict-bash": "^1.0.10",
+    "@cspell/dict-companies": "^1.0.34",
+    "@cspell/dict-cpp": "^1.1.36",
+    "@cspell/dict-cryptocurrencies": "^1.0.9",
+    "@cspell/dict-csharp": "^1.0.9",
+    "@cspell/dict-css": "^1.0.9",
+    "@cspell/dict-django": "^1.0.24",
+    "@cspell/dict-dotnet": "^1.0.23",
+    "@cspell/dict-elixir": "^1.0.22",
+    "@cspell/dict-en-gb": "^1.1.27",
+    "@cspell/dict-en_us": "^1.2.37",
+    "@cspell/dict-filetypes": "^1.1.4",
+    "@cspell/dict-fonts": "^1.0.12",
+    "@cspell/dict-fullstack": "^1.0.35",
+    "@cspell/dict-golang": "^1.1.23",
+    "@cspell/dict-haskell": "^1.0.11",
+    "@cspell/dict-html": "^1.1.4",
+    "@cspell/dict-html-symbol-entities": "^1.0.22",
+    "@cspell/dict-java": "^1.0.21",
+    "@cspell/dict-latex": "^1.0.22",
+    "@cspell/dict-lorem-ipsum": "^1.0.21",
+    "@cspell/dict-lua": "^1.0.15",
+    "@cspell/dict-node": "^1.0.8",
+    "@cspell/dict-npm": "^1.0.9",
+    "@cspell/dict-php": "^1.0.22",
+    "@cspell/dict-powershell": "^1.0.13",
+    "@cspell/dict-python": "^1.0.30",
+    "@cspell/dict-ruby": "^1.0.11",
+    "@cspell/dict-rust": "^1.0.21",
+    "@cspell/dict-scala": "^1.0.20",
+    "@cspell/dict-software-terms": "^1.0.22",
+    "@cspell/dict-typescript": "^1.0.15",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
-    "cspell-dict-aws": "^1.0.12",
-    "cspell-dict-bash": "^1.0.10",
-    "cspell-dict-companies": "^1.0.34",
-    "cspell-dict-cpp": "^1.1.36",
-    "cspell-dict-cryptocurrencies": "^1.0.9",
-    "cspell-dict-csharp": "^1.0.9",
-    "cspell-dict-css": "^1.0.9",
-    "cspell-dict-django": "^1.0.24",
-    "cspell-dict-dotnet": "^1.0.23",
-    "cspell-dict-elixir": "^1.0.22",
-    "cspell-dict-en-gb": "^1.1.27",
-    "cspell-dict-en_us": "^1.2.37",
-    "cspell-dict-filetypes": "^1.1.4",
-    "cspell-dict-fonts": "^1.0.12",
-    "cspell-dict-fullstack": "^1.0.35",
-    "cspell-dict-golang": "^1.1.23",
-    "cspell-dict-haskell": "^1.0.11",
-    "cspell-dict-html": "^1.1.4",
-    "cspell-dict-html-symbol-entities": "^1.0.22",
-    "cspell-dict-java": "^1.0.21",
-    "cspell-dict-latex": "^1.0.22",
-    "cspell-dict-lorem-ipsum": "^1.0.21",
-    "cspell-dict-lua": "^1.0.15",
-    "cspell-dict-node": "^1.0.8",
-    "cspell-dict-npm": "^1.0.9",
-    "cspell-dict-php": "^1.0.22",
-    "cspell-dict-powershell": "^1.0.13",
-    "cspell-dict-python": "^1.0.30",
-    "cspell-dict-ruby": "^1.0.11",
-    "cspell-dict-rust": "^1.0.21",
-    "cspell-dict-scala": "^1.0.20",
-    "cspell-dict-software-terms": "^1.0.22",
-    "cspell-dict-typescript": "^1.0.15",
     "cspell-io": "^4.1.7",
     "cspell-trie-lib": "^4.2.6",
     "cspell-util-bundle": "^4.1.9",
