--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -16,9 +16,7 @@
     "build": "tsc -p .",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
-    "test-watch": "jest --watch",
-    "test": "jest",
-    "watch": "tsc -w"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
