--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build": "tsc -p .",
     "watch": "tsc -p . -w",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist coverage",
     "clean-build": "npm run clean && npm run build",
     "prepare": "npm run build",
     "coverage": "jest --coverage",
