--- a/packages/cspell-trie-lib/package.json
+++ b/packages/cspell-trie-lib/package.json
@@ -10,7 +10,7 @@
     "!**/*.test.*"
   ],
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist coverage",
     "build": "tsc -p .",
     "clean-build": "npm run clean && npm run build",
     "coverage": "jest --coverage",
