--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -30,7 +30,7 @@
     "!**/*.map"
   ],
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf dist coverage",
     "build": "npm run compile",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
