--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -2,6 +2,9 @@
   "name": "@cspell/cspell-bundled-dicts",
   "version": "5.0.4",
   "description": "Dictionaries bundled with cspell",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [],
   "scripts": {},
   "repository": {
