--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/streetsidesoftware/cspell/labels/cspell-bundled-dicts"
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
+  "exports": {
+    "./cspell-default.json": "./cspell-default.json"
+  },
   "dependencies": {
     "@cspell/dict-aws": "^1.0.12",
     "@cspell/dict-bash": "^1.0.10",
