dev: import dev dependencies

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -63,7 +63,12 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@cspell/dict-cpp": "^1.1.36",
+    "@cspell/dict-csharp": "^1.0.9",
+    "@cspell/dict-css": "^1.0.9",
+    "@cspell/dict-html": "^1.1.4",
     "@cspell/dict-nl-nl": "^1.0.34",
+    "@cspell/dict-python": "^1.0.30",
     "@types/configstore": "^4.0.0",
     "@types/fs-extra": "^9.0.5",
     "@types/minimatch": "^3.0.3",
