ci: use cspell4 tag for version 4 publications

--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-graduate",
-    "pub": "npm install && npm test && lerna publish from-git",
-    "pub-lerna": "lerna publish from-git",
-    "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
+    "pub": "npm install && npm test && lerna publish from-git --dist-tag cspell4",
+    "pub-lerna": "lerna publish from-git --dist-tag cspell4",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
