--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-commits --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-commits --conventional-graduate",
-    "pub": "npm install && npm test && lerna publish from-git",
+    "pub": "npm install && npm test && lerna publish --conventional-commits",
     "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
     "test-watch": "lerna run --parallel test-watch",
