--- a/.github/workflows/cspell-action.yml
+++ b/.github/workflows/cspell-action.yml
@@ -22,4 +22,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: streetsidesoftware/cspell-action@v0.2.1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
