fix: issue with importing cspell

--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -8,7 +8,7 @@
     "cspell": "bin.js"
   },
   "exports": {
-    ".": "./dist/index",
+    ".": "./dist/index.js",
     "./app": "./dist/app.js",
     "./application": "./dist/application.js",
     "./dist/app": "./dist/app.js",
