--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
     "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci",
-    "update-snapshot": "lerna run update-snapshot"
+    "update-snapshots": "lerna run update-snapshots --scope cspell-integration-tests"
   },
   "repository": {
     "type": "git",
