--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "test-ts": "lerna run test-ts",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && ajv -s ./cspell.schema.json -d cspell.json",
-    "update-packages": "lerna exec \"npm update -S && rm -rf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci"
+    "test-integrations": "cd ./integration-tests && npm run integration-tests",
+    "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci",
+    "update-snapshots": "lerna run update-snapshots --scope cspell-integration-tests"
   },
   "repository": {
     "type": "git",
