dev: do not run prettier on temp directories

--- a/.prettierignore
+++ b/.prettierignore
@@ -4,6 +4,7 @@ CHANGELOG.md
 cspell.json
 cspell.schema.json
 dist/
+[tT]emp/
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
 lerna.json
