--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-graduate",
-    "pub": "npm install && npm test && lerna publish from-git --dist-tag cspell4",
-    "pub-lerna": "lerna publish from-git --dist-tag cspell4",
+    "pub": "npm install && npm test && lerna publish --conventional-commits --dist-tag cspell4",
+    "pub-lerna-from-git": "lerna publish from-git --dist-tag cspell4",
     "symlink": "node build_tools/bin/symlink.js packages",
     "test-spec": "lerna run test-spec",
     "test-ts": "lerna run test-ts",
