dev: rename package

--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "cspell-tools",
+  "name": "@cspell/cspell-tools",
   "version": "5.1.1",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "cspell-tools": "bin.js"
   },
