fix: Remap schema generation for new values

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "clean": "rimraf dist temp coverage",
     "build": "npm run compile && npm run build-schema",
-    "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validation-keywords markdownDescription  --validation-keywords scope --validation-keywords deprecationMessage -o  ../../cspell.schema.json",
+    "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validation-keywords markdownDescription  --validation-keywords scope --validation-keywords deprecated  --validation-keywords defaultValue -o  ../../cspell.schema.json",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
