--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -49,6 +49,7 @@
     "@cspell/cspell-bundled-dicts": "^5.1.0",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
+    "cosmiconfig": "^7.0.0",
     "cspell-io": "^5.1.3",
     "cspell-trie-lib": "^5.1.3",
     "fs-extra": "^9.1.0",
