--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+          # Make sure it goes back far enough to find where the branch split from master
+          fetch-depth: 20
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
