feat: support .yaml and .js configuration files (#875)
cspell will search for the following files:
```
       'package.json',
        'cspell.json',
        'cSpell.json',
        '.cspell.json',
        '.vscode/cspell.json',
        '.vscode/cSpell.json',
        '.vscode/.cspell.json',
        '.cSpell.json',
        'cspell.yaml',
        'cspell.yml',
        'cspell.js',
        'cspell.cjs',
```

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,16 +5,10 @@ on:
     branches:
       - master
       - cspell4
-    paths:
-      - "**/*.js"
-      - "**/*.ts"
   pull_request:
     branches:
       - master
       - cspell4
-    paths:
-      - "**/*.js"
-      - "**/*.ts"
   schedule:
     - cron: "0 23 * * 0"
 
@@ -26,6 +20,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          # Make sure it goes back far enough to find where the branch split from master
+          fetch-depth: 20
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
