feat: Add options --show-context and --relative
- `--relative` - files names are relative to the current working dir
- `--show-context` - shows the text surrounding the an issue.

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,7 +3,7 @@
 CHANGELOG.md
 cspell.json
 cspell.schema.json
-dist/
+**/dist/
 [tT]emp/
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
