ci: use package `@cspell/cspell-types`

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -13,8 +13,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist temp coverage",
-    "build": "npm run compile && npm run build-schema",
-    "build-schema": "ts-json-schema-generator --no-top-ref --path src/Settings/CSpellSettingsDef.ts --type CSpellSettings --validation-keywords markdownDescription  --validation-keywords scope --validation-keywords deprecationMessage -o  ../../cspell.schema.json",
+    "build": "npm run compile",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
@@ -47,6 +46,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "@cspell/cspell-bundled-dicts": "^5.2.2",
+    "@cspell/cspell-types": "^5.0.0",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
     "cosmiconfig": "^7.0.0",
