--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -63,6 +63,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@cspell/cspell-types": "^5.2.4",
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
     "comment-json": "^4.1.0",
@@ -71,7 +72,6 @@
     "fs-extra": "^9.1.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
-    "minimatch": "^3.0.4",
     "strip-ansi": "^6.0.0"
   },
   "engines": {
@@ -80,8 +80,11 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.6",
     "@types/glob": "^7.1.3",
+    "@types/micromatch": "^4.0.1",
     "@types/minimatch": "^3.0.3",
     "jest": "^26.6.3",
+    "micromatch": "^4.0.2",
+    "minimatch": "^3.0.4",
     "rimraf": "^3.0.2"
   }
 }
