--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -75,7 +75,6 @@
     "cspell-dict-nl-nl": "^1.1.1",
     "jest": "^26.6.3",
     "lorem-ipsum": "^2.0.3",
-    "rimraf": "^3.0.2",
-    "ts-json-schema-generator": "^0.83.2"
+    "rimraf": "^3.0.2"
   }
 }
