dev: Normalize globs in settings files (#946)
By default, glob's defined in the configuration files will have their root defaulted to be the path to the configuration file.

Original behavior is preserved for config files with `version` set to `0.1`.

* dev: Normalize globs in settings files to use the config file's path as the root.
* dev: remove unused packages
* dev: Set the globRoot for the integration tests.
* dev: make sure v 0.1 config files still work the same as before.

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -50,11 +50,11 @@
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
     "cosmiconfig": "^7.0.0",
+    "cspell-glob": "^5.2.0",
     "cspell-io": "^5.2.0",
     "cspell-trie-lib": "^5.2.2",
     "fs-extra": "^9.1.0",
     "gensequence": "^3.1.1",
-    "minimatch": "^3.0.4",
     "resolve-from": "^5.0.0",
     "resolve-global": "^1.0.0",
     "vscode-uri": "^3.0.2"
@@ -71,12 +71,10 @@
     "@cspell/dict-python": "^1.0.33",
     "@types/configstore": "^4.0.0",
     "@types/fs-extra": "^9.0.6",
-    "@types/minimatch": "^3.0.3",
     "@types/node": "^14.14.25",
     "cspell-dict-nl-nl": "^1.1.1",
     "jest": "^26.6.3",
     "lorem-ipsum": "^2.0.3",
-    "rimraf": "^3.0.2",
-    "ts-json-schema-generator": "^0.83.2"
+    "rimraf": "^3.0.2"
   }
 }
