dev: update packages (#21)
* dev: update packages

* Address security warning about regexp.

* break: Remove support for Node 10

* Update azure-pipelines.yml

* Create .editorconfig

* Create test.yml

* dev: use double quotes for windows

* dev: use github-action for coverage

* Update CHANGELOG.md

* dev: Add jest

* dev: migrate to jest from mocha

--- a/packages/hunspell-reader/azure-pipelines.yml
+++ b/packages/hunspell-reader/azure-pipelines.yml
@@ -4,36 +4,33 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+  - master
 
 strategy:
   matrix:
     linux:
-      imageName: 'ubuntu-latest'
+      imageName: "ubuntu-latest"
       node_version: 12.x
     mac:
-      imageName: 'macos-latest'
+      imageName: "macos-latest"
       node_version: 12.x
     windows:
-      imageName: 'windows-latest'
+      imageName: "windows-latest"
       node_version: 12.x
-    node_10_x:
-      imageName: 'ubuntu-latest'
-      node_version: 10.x
 
 pool:
   vmImage: $(imageName)
 
 steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: $(node_version)
-  displayName: 'Install Node.js'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: $(node_version)
+    displayName: "Install Node.js"
 
-- script: |
-    npm install
-  displayName: 'npm install and build'
+  - script: |
+      npm install
+    displayName: "npm install and build"
 
-- script: |
-    npm test
-  displayName: 'unit tests'
+  - script: |
+      npm test
+    displayName: "unit tests"
