--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -12,19 +12,16 @@
     "!**/*.test.*"
   ],
   "scripts": {
-    "test-unit": "mocha --recursive ./dist/*.test.js",
-    "test-spelling": "cspell 'src/**/*.ts' '*.md'",
+    "test-unit": "jest",
+    "test-spelling": "cspell \"src/**/*.ts\" \"*.md\"",
+    "smoke-test": "../bin.js words ./dictionaries/nl -n 100",
     "test": "npm run test-unit && npm run test-spelling",
     "build": "tsc -p .",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test",
-    "clean": "rimraf ./dist",
-    "coverage": "npm run generate-code-coverage",
-    "generate-code-coverage": "NODE_ENV=test nyc npm run test-ts",
-    "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive \"src/**/*.test.ts\"",
-    "test-watch": "mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
-    "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "travis-coverage": "npm run generate-code-coverage && npm run coverage-coveralls",
+    "lint": "prettier -w \"**/*.{md,yaml,yml,json,ts}\"",
+    "clean": "rimraf dist coverage",
+    "coverage": "jest --coverage",
     "watch": "tsc -w"
   },
   "repository": {
@@ -41,24 +38,20 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/fs-extra": "^8.1.1",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^10.17.42",
-    "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
-    "cspell": "^4.1.2",
-    "mocha": "^8.2.0",
-    "nyc": "^15.1.0",
+    "@types/fs-extra": "^9.0.7",
+    "@types/node": "^12.20.1",
+    "cspell": "^5.2.4",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
-    "commander": "^2.20.3",
-    "fs-extra": "^8.0.1",
+    "commander": "^7.1.0",
+    "fs-extra": "^9.1.0",
     "gensequence": "^3.1.1",
-    "iconv-lite": "^0.5.2"
+    "iconv-lite": "^0.6.2"
   },
   "eslintConfig": {
     "root": true,
@@ -73,25 +66,6 @@
     "rules": {}
   },
   "engines": {
-    "node": ">=10.0.0"
-  },
-  "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.test.ts",
-      "src/**/*.spec.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "json",
-      "html"
-    ]
+    "node": ">=12.0.0"
   }
 }
