--- a/packages/hunspell-reader/tsconfig.json
+++ b/packages/hunspell-reader/tsconfig.json
@@ -1,24 +1,21 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-		"target": "es2015",
+        "target": "es2015",
         "noImplicitAny": false,
-		"noImplicitThis": true,
-		"strictNullChecks": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+        "noImplicitThis": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "sourceMap": true,
-		"alwaysStrict": true,
+        "alwaysStrict": true,
         "declaration": true,
         "moduleResolution": "node",
         "removeComments": false,
         "preserveConstEnums": false,
         "outDir": "dist",
-		"lib": ["dom", "dom.iterable", "es2015"],
-		"forceConsistentCasingInFileNames": true
+        "lib": ["dom", "dom.iterable", "es2015"],
+        "forceConsistentCasingInFileNames": true
     },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "exclude": ["node_modules", "dist"]
 }
