dev: Add `noConfigSearch` to configuration
Support reading local config files when spell checking a file.

This makes having supporting workspaces with multiple folders easier.

--- a/packages/cspell-lib/cspell.config.json
+++ b/packages/cspell-lib/cspell.config.json
@@ -1,11 +1,10 @@
 {
-    "version": "0.1",
-    "id": "cspell-project-config",
-    "name": "cspell Project Config",
+    "version": "0.2",
+    "id": "cspell-package-config",
+    "name": "cspell Package Config",
     "language": "en",
     "words": [
-        "gensequence",
-        "xregexp"
+        "gensequence"
     ],
     "maxNumberOfProblems": 100,
     "ignorePaths": [
