--- a/packages/cspell-lib/cspell.config.json
+++ b/packages/cspell-lib/cspell.config.json
@@ -3,9 +3,7 @@
     "id": "cspell-package-config",
     "name": "cspell Package Config",
     "language": "en",
-    "words": [
-        "gensequence"
-    ],
+    "words": ["gensequence"],
     "maxNumberOfProblems": 100,
     "ignorePaths": [
         "dictionaries/**",
@@ -22,7 +20,5 @@
     "allowCompoundWords": false,
     "dictionaryDefinitions": [],
     "ignoreWords": [],
-    "import": [
-        "../../cspell.json"
-    ]
+    "import": ["../../cspell.json"]
 }
