--- a/packages/cspell-lib/cspell.config.json
+++ b/packages/cspell-lib/cspell.config.json
@@ -1,12 +1,9 @@
 {
-    "version": "0.1",
-    "id": "cspell-project-config",
-    "name": "cspell Project Config",
+    "version": "0.2",
+    "id": "cspell-package-config",
+    "name": "cspell Package Config",
     "language": "en",
-    "words": [
-        "gensequence",
-        "xregexp"
-    ],
+    "words": ["gensequence"],
     "maxNumberOfProblems": 100,
     "ignorePaths": [
         "dictionaries/**",
@@ -23,7 +20,5 @@
     "allowCompoundWords": false,
     "dictionaryDefinitions": [],
     "ignoreWords": [],
-    "import": [
-        "../../cspell.json"
-    ]
+    "import": ["../../cspell.json"]
 }
