--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-glob",
-  "version": "5.2.0",
+  "version": "5.3.0-alpha.0",
   "description": "Glob matcher for cspell",
   "keywords": [
     "cspell",
