--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "5.2.4",
+  "version": "5.3.0-alpha.0",
   "description": "A Spelling Checker for Code!",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -63,12 +63,12 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
-    "@cspell/cspell-types": "^5.2.4",
+    "@cspell/cspell-types": "^5.3.0-alpha.0",
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
     "comment-json": "^4.1.0",
-    "cspell-glob": "^5.2.0",
-    "cspell-lib": "^5.2.4",
+    "cspell-glob": "^5.3.0-alpha.0",
+    "cspell-lib": "^5.3.0-alpha.0",
     "fs-extra": "^9.1.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
